src/sass/partials/_csr-policy.scss
/* ... */
.app-wrapper.csr.policy main .content-wrapper .route-content {
  .endorsements {
    position: relative;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;

    .endo-jump-menu {
      display: flex;
      align-content: space-between;
      flex: 1 0 auto;
      padding: $padding;
      border-bottom: dashed 1px $warm-gray-04;
      background: $white;

      * {
        flex: 1 1 auto;
        margin: 0 ($padding);
      }
    }

    .scroll {
      flex-shrink: 1;

      .flex-child.col3 {
        width: 50%;

        .form-group.labels {
          display: flex;
          align-items: center;
          flex-direction: row;

          label {
            flex: 0 1 33.33%;
            width: 33.33%;
            margin: 0 ($padding) 0 0;
            text-align: left;
          }

          label:nth-child(3) {
            margin: 0;
          }
        }

        .form-group-double-element {
          display: flex;
          align-items: center;
          flex-direction: row;
          margin: 0 0 ($padding);

          .form-group {
            display: flex;
            align-items: center;
            flex: 0 1 66.66%;
            flex-direction: row;
            width: 66.66%;
            margin: 0 ($padding) 0 0;

            label {
              flex: 0 1 50%;
              width: 50%;
              margin: 0 ($padding) 0 0;
              text-align: right;

              span {
                font-size: 0.7em;
              }
            }

            > *:nth-child(2) {
              flex: 0 1 50%;
              width: 50%;
              margin: 0 ($padding) 0 0;
            }
          }

          > .form-group:nth-child(2) {
            flex: 0 1 33.33%;
            width: 33.33%;

            * {
              flex: 0 1 100%;
              width: 100%;
              margin: 0;
            }

            label {
              display: none;
            }
          }
        }
      }

      .flex-parent.col2 {
        .flex-child {
          width: 50%;

          .flex-parent.col2 {
            .form-group {
              width: 50%;
              margin-left: ($padding);
            }

            .form-group:nth-child(1) {
              margin-left: 0;
            }
          }
        }
      }

      .flex-parent.col211 {
        .flex-child:nth-child(1) {
          width: 60%;
        }
      }
    }

    .endo-results-calc {
      flex: 1 0 auto;
      padding: $padding $padding 0;
      background: $white;
      background: $bright-blue-darken-04;

      .btn-primary {
        color: $bright-blue-darken-04;
        background-color: $white;
      }

      .btn-secondary {
        color: $white;
        border: 1px solid $white;
        background-color: $bright-blue-darken-04;
      }

      .form-group {
        display: flex;
        align-content: space-between;
        align-items: flex-end;
        align-items: center;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: flex-start;

        * {
          flex: 1 1 auto;
          width: auto;
        }

        label {
          flex: 0 1 auto;
          margin: 0 ($padding*2);
          text-align: right;
          color: $white;
          font-size: 0.8em;
        }
      }

      .flex-parent:nth-child(2) {
        .form-group {
          width: 25%;
          margin-right: $padding;

          input {
            flex: 0 0 auto;
            width: 25%;
            color: $white;
            border: none;
            border-bottom: 1px solid $white;
            border-radius: 0;
            background: transparent;
          }

          label {
            flex: 1 1 75%;
          }
        }

        .btn-footer {
          align-self: flex-start;
          width: 25%;
          margin-bottom: 0;
        }
      }
    }

    .additionalInterests {
      .results-wrapper {
        margin: ($padding*2) 0 ($padding*4);
      }
    }
  }

  .underwriting-validation {
    flex-shrink: 0;
    width: 240px;
    padding: 0 0 ($padding*2) ($padding*2);
  }
}

